--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ async function sendRequest() {
 
     try {
         // REPLACE THE URL BELOW WITH YOUR ACTUAL RENDER LINK
-        const response = await fetch('https://your-service-name.onrender.com/orders', {
+        const response = await fetch('https://efyoos-backend.onrender.com/request', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(data)
